# witness-angel-recorder

./: .gitignore  CHANGELOG  LICENSE.txt  License.txt  Readme.rst  main.py  pip_requirements_export.txt  pyinstaller.spec  pyproject.toml  update_i18n.sh
GUI/: MyMain.kv  WARD_GUI.ini  WARD_GUI.kv  WARD_GUI.py  WitnessWardAPI.py
ansible/: README.md  configure-raspberrypi-system.yml  export-raspberrypi-system-image.yml  hosts  reauthorize_raspberrypi_ssh_host.sh
ansible/backups/: i2smic.py
ansible/files/: custom_boot_checkups.sh  hwclock-set  install_bcm2835_lib.sh  install_dfrobot_2in13_v2_python_lib.sh  install_i2smic_setup_scripts.sh  install_poetry_dependencies.sh  install_waveshare_lcd_examples.sh  setup_ufw.sh  wanvr.desktop  warecorder.desktop
assets/: icon_recorder_512x512.icns
docs/: ffmpeg_4-3_options_RTSP_demuxer.txt  ffmpeg_4-3_options_full.txt  ffmpeg_4-4_options_RTSP_demuxer.txt  ffmpeg_4-4_options_full.txt  ffmpeg_5-0_options_RTSP_demuxer.txt  ffmpeg_5-0_options_full.txt
src/: main.py  resurrect_service.py  service.py
src/GUI/: WARD_GUI.ini  WARD_GUI.kv  WARD_GUI.py  settingsjson.py
src/client/: camera_handling.py  ciphering_toolchain.py
src/client/utilities/: misc.py
src/wanvr/: __init__.py  __main__.py  app.py  background_service.py  common.py  common_config.py  common_runtime.py  config_defaults.ini  config_schema.json  config_template.ini  rtsp_camera.py  user_settings_schema.json  wanvr_gui.kv  wanvr_gui.py  wanvr_service.py  wardgui.ini  wardgui.kv
src/wanvr/locale/fr/LC_MESSAGES/: witnessangel.mo  witnessangel.po
src/wanvr/rtsp_recorder/: camera_handling.py  ciphering_toolchain.py
src/warecorder/: config_defaults.ini  warecorder_common_runtime.py  warecorder_gui.py  warecorder_service.py
src/warecorder/locale/fr/LC_MESSAGES/: witnessangel.mo  witnessangel.po
tests/: test_camera_handling.py  test_ciphering_toolchain.py
tests/.pytest_cache/v/cache/: lastfailed
warecorder/: __init__.py  warecorder_common_runtime.py  warecorder_gui.kv  warecorder_gui.py  warecorder_service.py
warecorder/locale/fr/LC_MESSAGES/: witnessangel.mo  witnessangel.po
