[build-system]
requires = ["poetry_core"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "warecorder"
description = "Witness Angel Recorder"
version = "0.1"
license = "MIT"
readme = "Readme.rst"
authors = ["Pascal Chambon", "Manon Michelet", "Akram Bourichi", "Francinette Atchade"]
homepage = "https://github.com/WitnessAngel/witness-angel-recorder-python"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
]
include = ["CHANGELOG"]
exclude = ["__pycache__"]

[tool.poetry.dependencies]
python = ">=3.7, <4.0"

# For now WA dependencies must be manually installed at selected versions !
wacryptolib = { git = "https://github.com/WitnessAngel/witness-angel-cryptolib.git", branch = "warecorder_stable" }
wacomponents = { git = "https://github.com/WitnessAngel/witness-angel-components.git", branch = "warecorder_stable" }

# Wacomponents dependencies
Kivy = {version = "^2.0.0", extras = ["base"]}
kivymd = "^1.0"
plyer = "^2.0.0"
# BREAKS ALL DUE TO "aux" FOLDER IN GIT REPO : pyobjus = {version = "^1.2.1 ", platform = 'darwin'}
oscpy = "^0.5.0"
Pillow = "^9"
pulsectl = "^22.3.2"

[tool.poetry.dev-dependencies]

# Test runners and plugins
pytest = "^4.5"
pytest-cov = "^2.7"
pytest-randomly = "^3.0"
pytest-deadfixtures = "^2.1"
pytest-timeout = "^1.3"
freezegun = "^0.3.12"
typeguard = "^2.13.3"

# Linters and formatters
black = {version = "^21.12b0", allow-prereleases = true}

