[build-system]
requires = ["poetry_core"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "warecorder"
description = "Witness Angel Recorder"
version = "0.1"
license = "MIT"
readme = "Readme.rst"
authors = ["Pascal Chambon", "Manon Michelet", "Akram Bourichi", "Francinette Atchade"]
homepage = "https://github.com/WitnessAngel/witness-angel-recorder-python"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
]
include = ["CHANGELOG"]
exclude = ["__pycache__"]


[tool.poetry.dependencies]
python = ">=3.8, <4.0"

# For now WA dependencies must be manually installed at selected versions !
wacryptolib = { git = "https://github.com/WitnessAngel/witness-angel-cryptolib.git", branch = "warecorder_stable" }
wacomponents = { git = "https://github.com/WitnessAngel/witness-angel-components.git", branch = "warecorder_stable" }

# Wacomponents dependencies
Kivy = {version = "^2.2.1", extras = ["base"]}
kivymd = "^1.1.1"
plyer = "^2.1.0"
Pillow = "^10.0.0"
# BREAKS ALL DUE TO "aux" FOLDER IN GIT REPO: pyobjus = {version = "^1.2.1 ", platform = 'darwin'}
oscpy = "^0.6.0"
pulsectl = "^23"
buttonshim = "^0.0.2"


[tool.poetry.dev-dependencies]

PyInstaller = ">=4.2"

